update JS to be more explicit about what it's doing

--- a/sourcemaps-in-console/index.html
+++ b/sourcemaps-in-console/index.html
@@ -8,9 +8,8 @@
 <body>
 
   <section id="example">
-    <input id ="user" type="text" name="submitButton" value="" />
-    <input id ="greetme" type="button" name="submitButton" value="Greet Me!" />
-    <div id="welcome"></div>
+    <input id ="message" type="text" name="submitButton" value="" />
+    <input id ="log-message" type="button" name="submitButton" value="Log message!" />
   </section>
 
   <script type="text/javascript" src="js/main.min.js"></script>
