better links for example files

--- a/sourcemaps-in-console/index.html
+++ b/sourcemaps-in-console/index.html
@@ -23,9 +23,9 @@
 <p>We wrote the original source using <a href="http://coffeescript.org/">CoffeeScript</a>, and compiled it to JavaScript. We've also generated a source map for it.</p>
 
 <ul>
-  <li><a href="https://wbamberg.github.io/devtools-examples/sourcemaps-in-console/js/main.coffee">See the original CoffeeScript source.</a></li>
-  <li><a href="https://wbamberg.github.io/devtools-examples/sourcemaps-in-console/js/main.js">See the compiled JavaScript source.</a></li>
-  <li><a href="https://wbamberg.github.io/devtools-examples/sourcemaps-in-console/js/main.js.map">See the source map.</a></li>
+  <li><a href="https://raw.githubusercontent.com/wbamberg/devtools-examples/gh-pages/sourcemaps-in-console/js/main.coffee">See the original CoffeeScript source.</a></li>
+  <li><a href="https://raw.githubusercontent.com/wbamberg/devtools-examples/gh-pages/sourcemaps-in-console/js/main.js">See the compiled JavaScript source.</a></li>
+  <li><a href="https://raw.githubusercontent.com/wbamberg/devtools-examples/gh-pages/sourcemaps-in-console/js/main.js.map">See the source map.</a></li>
 </ul>
 
 <p>The message that appears in the console has a link back to the source file. Without source map support, this will link to the compiled JavaScript source. With source map support, it will link to the original CoffeeScript source.</p>
