Use master branch for GitHub pages

--- a/sourcemaps-in-console/index.html
+++ b/sourcemaps-in-console/index.html
@@ -23,9 +23,9 @@
 <p>We wrote the original source using <a href="http://coffeescript.org/">CoffeeScript</a>, and compiled it to JavaScript. We've also generated a source map for it.</p>
 
 <ul>
-  <li><a href="https://raw.githubusercontent.com/mdn/devtools-examples/gh-pages/sourcemaps-in-console/js/main.coffee">See the original CoffeeScript source.</a></li>
-  <li><a href="https://raw.githubusercontent.com/mdn/devtools-examples/gh-pages/sourcemaps-in-console/js/main.js">See the compiled JavaScript source.</a></li>
-  <li><a href="https://raw.githubusercontent.com/mdn/devtools-examples/gh-pages/sourcemaps-in-console/js/main.js.map">See the source map.</a></li>
+  <li><a href="https://github.com/mdn/devtools-examples/blob/master/sourcemaps-in-console/js/main.coffee">See the original CoffeeScript source.</a></li>
+  <li><a href="https://github.com/mdn/devtools-examples/blob/master/sourcemaps-in-console/js/main.js">See the compiled JavaScript source.</a></li>
+  <li><a href="https://github.com/mdn/devtools-examples/blob/master/sourcemaps-in-console/js/main.js.map">See the source map.</a></li>
 </ul>
 
   <script type="text/javascript" src="js/main.js"></script>
