Added whitespace-only example

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <h1>Example websites for Firefox Developer Tools</h1>
 
+<p><a href="animation-inspector/animation-inspector-compositing.html">Animation compositing</a></p>
+<p><a href="animation-inspector/animation-inspector-compositing-silly.html">Silly animation compositing</a></p>
 <p><a href="sourcemaps-in-console/index.html">JavaScript source maps in the console</a></p>
+<p><a href="whitespace-only-demo/index.html">Whitespace-only text nodes</a></p>
